--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-CHROME_PATH="C:/Program Files/Google/Chrome/Application/chrome.exe"
+REDDIT_CLIENT_ID=sCLUXQQQSCtU9RBo078zKw
+REDDIT_CLIENT_SECRET=JboVecuL-VE2UqOun9wrRhiqQNkotQ
+REDDIT_USERNAME=Automatic-Mix-7369
+REDDIT_PASSWORD=teamo19C
