--- a/package.json
+++ b/package.json
@@ -1,23 +1,1 @@
-{
-  "name": "google-scholar-crawler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
-    "commander": "^12.1.0",
-    "csv-writer": "^1.6.0",
-    "dotenv": "^16.4.5",
-    "exceljs": "^4.4.0",
-    "pdfkit": "^0.15.0",
-    "puppeteer": "^22.11.0",
-    "winston": "^3.13.0"
-  }
-}
+{"name":"reddit-crawler","version":"1.0.0","description":"","main":"redditCrawler.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node redditCrawler.js"},"keywords":[],"author":"","license":"ISC","dependencies":{"axios":"^0.27.2","cheerio":"^1.0.0-rc.12","commander":"^9.4.1","dotenv":"^16.0.1","exceljs":"^4.3.0","json-as-xlsx":"^2.5.6","json2csv":"^5.0.7","pdfkit":"^0.15.0","pdfmake":"^0.1.70","winston":"^3.8.1"}}
